// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth reducer handles AUTH_TOKENS_REFRESHED 1`] = `
Object {
  "authProvider": null,
  "authorizationToken": "AUTH_TOKEN",
  "errorMessage": "",
  "isAuthenticated": false,
  "isFetching": false,
  "refreshToken": "REFRESH_TOKEN",
}
`;

exports[`auth reducer handles LOGIN_FAILURE 1`] = `
Object {
  "authProvider": null,
  "authorizationToken": null,
  "errorMessage": "some error",
  "isAuthenticated": false,
  "isFetching": false,
  "refreshToken": null,
}
`;

exports[`auth reducer handles LOGIN_REQUEST 1`] = `
Object {
  "authProvider": "facebook",
  "authorizationToken": null,
  "errorMessage": "",
  "isAuthenticated": false,
  "isFetching": true,
  "refreshToken": null,
}
`;

exports[`auth reducer handles LOGIN_SUCCESS 1`] = `
Object {
  "authProvider": null,
  "authorizationToken": "AUTH_TOKEN",
  "errorMessage": "",
  "isAuthenticated": true,
  "isFetching": false,
  "refreshToken": "REFRESH_TOKEN",
}
`;

exports[`auth reducer handles LOGOUT 1`] = `
Object {
  "authProvider": null,
  "authorizationToken": null,
  "errorMessage": "",
  "isAuthenticated": false,
  "isFetching": false,
  "refreshToken": null,
}
`;

exports[`auth reducer has an initial state 1`] = `
Object {
  "authProvider": null,
  "authorizationToken": null,
  "errorMessage": "",
  "isAuthenticated": false,
  "isFetching": false,
  "refreshToken": null,
}
`;
